WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156414
bmalloc: stress_aligned test fails if you increase smallMax
https://bugs.webkit.org/show_bug.cgi?id=156414
Summary
bmalloc: stress_aligned test fails if you increase smallMax
Geoffrey Garen
Reported
2016-04-08 12:27:48 PDT
bmalloc: stress_aligned test is failing
Attachments
Patch
(3.15 KB, patch)
2016-04-08 13:37 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(3.15 KB, patch)
2016-04-08 13:38 PDT
,
Geoffrey Garen
oliver
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2016-04-08 13:37:33 PDT
Created
attachment 276035
[details]
Patch
Geoffrey Garen
Comment 2
2016-04-08 13:38:23 PDT
Created
attachment 276036
[details]
Patch
Oliver Hunt
Comment 3
2016-04-08 13:40:36 PDT
Comment on
attachment 276036
[details]
Patch r=me
Geoffrey Garen
Comment 4
2016-04-08 13:59:48 PDT
Committed
r199246
: <
http://trac.webkit.org/changeset/199246
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug